<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BatteryRecorder</string>
    <string name="start_server">启动服务</string>
    <string name="stop_server">停止服务</string>
    <string name="root_start_cmd"><![CDATA[app_process "-Djava.class.path=$(pm path yangfentuozi.batteryrecorder | sed 's/^package://')" / yangfentuozi.batteryrecorder.server.ServerMain]]></string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="about_view_source_code"><![CDATA[在 %s 查看源码]]></string>
    <string name="preference_dual_cell">双电芯</string>
    <string name="preference_dual_cell_summary">双电芯设备需开启此选项以显示正确的功耗信息</string>
    <string name="preference_current_unit_calibration">电流单位校准</string>
    <string name="preference_current_unit_calibration_summary">同 Scene</string>
    <string name="preference_interval">轮询间隔</string>
    <string name="preference_interval_summary">轮询查询功耗的间隔，越短越精准但也越耗电</string>
    <string name="preference_batch_size">缓存条数</string>
    <string name="preference_batch_size_summary">储存够多条数据后才会写入数据库，过小会导致频繁耗电，过大则会占用更多运行内存</string>
    <string name="preference_calibration">校准</string>
    <string name="preference_server">服务</string>
    <string name="preference_current_unit_calibration_dialog_message">当前充电速度，除以：</string>
    <string name="reset">重置</string>
    <string name="confirm_stop_server">确认停止服务?</string>
    <string name="start_card_title_b">启动（针对已 root 设备）</string>
    <string name="start_card_desc_b">另外，Shizuku 可以在开机时自动启动。如果没有，请检查您的系统或第三方工具是否限制了 Shizuku。你可以参考 https://dontkillmyapp.com/ 。</string>
</resources>