<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preference_calibration">

        <yangfentuozi.batteryrecorder.ui.preference.MaterialSwitchPreference
            android:defaultValue="false"
            android:key="dual_cell"
            android:summary="@string/preference_dual_cell_summary"
            android:title="@string/preference_dual_cell" />

        <Preference
            android:key="current_unit_calibration"
            android:summary="@string/preference_current_unit_calibration_summary"
            android:title="@string/preference_current_unit_calibration" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_server">

        <Preference
            android:key="interval"
            android:summary="@string/preference_interval_summary"
            android:title="@string/preference_interval" />

        <Preference
            android:key="batch_size"
            android:summary="@string/preference_batch_size_summary"
            android:title="@string/preference_batch_size" />
    </PreferenceCategory>
</PreferenceScreen>
